# cmis_nk_games

./: README.md  pyproject.toml  requirements.txt
config/: ethiraj2004_baseline.yml  lazer2007_baseline.yml  levinthal1997_baseline.yml
docs/: README.md  basic_design.md  detailed_design.md  ethiraj_basic_design.md  ethiraj_detailed_design.md  ethiraj_requirements.md  levinthal_basic_design.md  levinthal_requirements.md
docs/design/ethiraj2004/: basic_design.md  detailed_design.md  requirements.md
docs/design/lazer2007/: basic_design.md  detailed_design.md  requirements.md
docs/design/levinthal1997/: basic_design.md  detailed_design.md  requirements.md
docs/papers/: README.md
docs/papers/Ethiraj2004/: Ethraj2004.html  modeling.html
docs/papers/Lazer2007/: Lazer2007.html  modeling.html
docs/papers/Levinthal1997/: Levinthal1997.html  modeling.html
docs/slides/: README.md
outputs/tables/: ethiraj2004_baseline.csv  lazer2007_baseline.csv  levinthal1997_baseline.csv
src/: run_lazer2007.py
src/cmis_nk/: __init__.py  agents.py  cli.py  config_loader.py  game_table.py  landscape.py  levinthal_game.py  local_search.py  networks.py  pipeline.py  simulation.py  utils.py  visualization.py
src/cmis_nk/common/: game_types.py
src/cmis_nk/ethiraj/: dynamics.py  game_table.py  landscape.py
src/cmis_nk/ethiraj2004/: __init__.py  game_table.py
src/cmis_nk/lazer2007/: __init__.py  game_table.py
src/cmis_nk/levinthal1997/: __init__.py  game_table.py
